small fix for dark mode in tournament page

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -25,6 +25,14 @@
   background-color: var(--dark-30);
 }
 
+.even\:bg-bga-gray-244:nth-child(2n) {
+  background-color: var(--dark-40);
+}
+
+.odd\:bg-bga-gray-233:nth-child(odd) {
+  background-color: var(--dark-10);
+}
+
 .text-bga-gray-78 {
   color: var(--light-70);
 }
@@ -2243,6 +2251,10 @@ iframe#forum_frame {
 .bga-date-chip,
 .bga-progress-bar__tooltip {
   filter: var(--ext-bright);
+}
+
+.bga-tournament__state div[style="background-color: rgb(209, 233, 233);"] {
+  background-color: var(--dark-40) !important;
 }
 
 /* Tournaments list page */
